Temp: run automation on 2.7 to study recent Travis CI failures

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,57 +15,57 @@ install: echo 'skip'
 cache: pip
 jobs:
   include:
-    - stage: precheck
-      env: PURPOSE='PEP8'
-      script: ./scripts/ci/precheck_pep8.sh
-      python: 3.6
-    - stage: precheck
-      env: PURPOSE='Headers'
-      script: ./scripts/ci/precheck_header.sh
-      python: 3.6
-    - stage: verify
-      env: PURPOSE='Lint Command Table and Help'
-      script: ./scripts/ci/verify_linter.sh
-      python: 3.6
-    - stage: verify
-      env: PURPOSE='Automation'
-      script: travis_wait 45 ./scripts/ci/test_automation.sh
-      python: 3.6
+    # - stage: precheck
+    #   env: PURPOSE='PEP8'
+    #   script: ./scripts/ci/precheck_pep8.sh
+    #   python: 3.6
+    # - stage: precheck
+    #   env: PURPOSE='Headers'
+    #   script: ./scripts/ci/precheck_header.sh
+    #   python: 3.6
+    # - stage: verify
+    #   env: PURPOSE='Lint Command Table and Help'
+    #   script: ./scripts/ci/verify_linter.sh
+    #   python: 3.6
+    # - stage: verify
+    #   env: PURPOSE='Automation'
+    #   script: travis_wait 45 ./scripts/ci/test_automation.sh
+    #   python: 3.6
     - stage: verify
       env: PURPOSE='Automation'
       script: travis_wait 45 ./scripts/ci/test_automation.sh
       python: 2.7
-    - stage: verify
-      script: ./scripts/ci/test_static.sh
-      env: PURPOSE='Static Check'
-      python: 3.6
-    - stage: verify
-      script: ./scripts/ci/test_integration.sh
-      env: PURPOSE='Integration'
-      python: 3.6
-    - stage: verify
-      script: ./scripts/ci/test_integration.sh
-      env: PURPOSE='Integration'
-      python: 2.7
-    - stage: verify
-      script: ./scripts/ci/test_perf.sh
-      env: PURPOSE='Module Load Performance'
-      python: 3.6
-    - stage: verify
-      script: ./scripts/ci/test_ref_doc.sh
-      env: PURPOSE='RefDocVerify'
-      python: 3.6
-    - stage: verify
-      env: PURPOSE='Load extension commands'
-      script: ./scripts/ci/test_extensions.sh
-      python: 3.6
-    - stage: publish
-      script: ./scripts/ci/publish.sh
-      python: 3.6
-      env: PURPOSE='Nightly Edge Build'
-      if: branch = dev and type = push
-    - stage: publish
-      script: ./scripts/ci/build_droid.sh
-      python: 3.6
-      env: PURPOSE='Automation Docker'
-      if: repo = Azure/azure-cli and type = push
+    # - stage: verify
+    #   script: ./scripts/ci/test_static.sh
+    #   env: PURPOSE='Static Check'
+    #   python: 3.6
+    # - stage: verify
+    #   script: ./scripts/ci/test_integration.sh
+    #   env: PURPOSE='Integration'
+    #   python: 3.6
+    # - stage: verify
+    #   script: ./scripts/ci/test_integration.sh
+    #   env: PURPOSE='Integration'
+    #   python: 2.7
+    # - stage: verify
+    #   script: ./scripts/ci/test_perf.sh
+    #   env: PURPOSE='Module Load Performance'
+    #   python: 3.6
+    # - stage: verify
+    #   script: ./scripts/ci/test_ref_doc.sh
+    #   env: PURPOSE='RefDocVerify'
+    #   python: 3.6
+    # - stage: verify
+    #   env: PURPOSE='Load extension commands'
+    #   script: ./scripts/ci/test_extensions.sh
+    #   python: 3.6
+    # - stage: publish
+    #   script: ./scripts/ci/publish.sh
+    #   python: 3.6
+    #   env: PURPOSE='Nightly Edge Build'
+    #   if: branch = dev and type = push
+    # - stage: publish
+    #   script: ./scripts/ci/build_droid.sh
+    #   python: 3.6
+    #   env: PURPOSE='Automation Docker'
+    #   if: repo = Azure/azure-cli and type = push
