--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ jobs:
     #   python: 3.6
     - stage: verify
       env: PURPOSE='Automation'
-      script: travis_wait 45 ./scripts/ci/test_automation.sh
+      script: ./scripts/ci/test_automation.sh
       python: 2.7
     # - stage: verify
     #   script: ./scripts/ci/test_static.sh
